fixed spacing of content containers

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,32 @@
+.site{
+  display: flex;
+  height: 88vh;
+  width:100vw;
+}
 
+.left{
+  flex:1;
+}
+
+.right{
+  flex:2;
+}
+
+
+.app{
+  display: flex;
+  width: 100%;
+}
 .sidebar{
-  float: left;
-  min-width:200px;
+  display: flex;
+  flex:1;
+  width:20%;
+  max-width:200px;
 }
 .main_content{
-  padding: 60px;
-  float:left;
+  padding: 0px 60px;
+  display: flex;
+  flex:2;
+  width:60%;
   min-width:600px;
 }
