--- a/src/components/sidenav/sidenav.module.css
+++ b/src/components/sidenav/sidenav.module.css
@@ -2,7 +2,7 @@
     display: block;
     background-color: ghostwhite;
     width: 200px;
-    height: 100vh;
+    height: 88vh;
 
 }
 
